# Firatina

./: .gitignore  CMakeLists.txt  README.md
Empty/: EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Common/: Allocator.cpp  Allocator.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  DebugHelper.h  FrameWorkDefinitions.h  GraphicsManager.h  main.cpp
Framework/Interface/: IApplication.h  IMemoryAllocator.h  IMemoryManager.h  IRuntimeModule.h  IWindow.h
Framework/Manager/: BlockAllocator.cpp  BlockAllocator.h  CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  WindowManager.h
Framework/Memory/: BufferedMemoryAllocator.cpp  BufferedMemoryAllocator.h  BufferedMemoryManager.cpp  BufferedMemoryManager.h  CMakeLists.txt  ObjectMemoryManager.cpp  ObjectMemoryManager.h  SingleFrameMemoryManager.cpp  SingleFrameMemoryManager.h  StackMemoryAllocator.cpp  StackMemoryAllocator.h  StackMemoryManager.cpp  StackMemoryManager.h  SystemMemoryAllocator.cpp  SystemMemoryAllocator.h
Framework/UnSafe/: CMakeLists.txt  SystemMemoryAllocator.cpp  SystemMemoryAllocator.h
Platform/: CMakeLists.txt
Platform/Empty/: CMakeLists.txt  EmptyApplication.cpp  EmptyApplication.h
Platform/Windows/: CMakeLists.txt  WindowsCreateWindow.cpp
